test/Fail/Issue2964.err
Issue2964.agda:13.15-19: error: [UnequalTerms]
test .fun Bool false x refl != false of type Bool
when checking that the expression refl has type
test .fun Bool false x refl ≡ false
